# mecha_lerobot

./: README.md  package.xml  setup.cfg  setup.py
ik_csv/0617/: 163006.csv  163353.csv  163353_rmse.csv  163738.csv
ik_csv/0621/: 141643.csv  141643_rmse.csv  142146.csv  142146_rmse.csv
launch/: display_ik_so101.launch.py  display_so101.launch.py  display_teleop_so101.launch.py
mecha/: so101_rviz_node.py
mecha_lerobot/: plot_so101_ik_csv.py  plot_so101_ik_csv_set_start_time.py  so101_dual_rviz_node.py  so101_ik_follower.py  so101_kinematics.py  so101_target_trajectory.py  so101_teleop_udp.py
rviz/: so101.rviz  so101_ik_dual.rviz
training/: ACT_training.ipynb
urdf/: so101_new_calib.urdf
video/: rviz.webm
